objects/ExternalPartyRelation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Contractor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contractors</relationshipLabel>
        <relationshipName>Contractors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; ExternalParties__c, ExternalParties__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalParties__c</fullName>
        <label>Contractor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contractor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contractors (Contractor)</relationshipLabel>
        <relationshipName>Contractors1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contractors</relationshipLabel>
        <relationshipName>Contractors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contractor</label>
    <nameField>
        <displayFormat>CNTR-{0000}</displayFormat>
        <label>Contractor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>